$Id: CHANGES,v 1.218 2003/02/25 14:06:47 stelian Exp $

Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
=======================================================================

1.	Fixed the INSTALL file to reflect the actual install paths.
	Thanks to David Ronis <ronis@ronispc.chem.mcgill.ca> for
	reporting the bug.

2.	Fixed the configure script to only check for headers presence
	instead of trying to compile them. This should fix issues
	with old build environments. Thanks to Kari Lempiainen 
	<kari@funky.pp.fi> for reporting the bug.

3.	Fixed restore to correctly ignore sockets when comparing
	a dump (as socket cannot be properly restored anyway). Thanks
	to Gunther Reiszig <gunther@mit.edu> for reporting the bug.

4.	Fixed restore to correctly access the archive file (-A argument)
	even when using a remote tape. Thanks to Fabrice Bellet 
	<fabrice@bellet.info> for reporting the bug.

5.	Fixed (again) handling of long (largefile) seeks in rmt.
	Thanks to Fabrice Bellet <fabrice@bellet.info> for reporting
	the bug.

6.	Fixed restore corner case when dealing with large block sizes
	dump is able to write now (-b 1024). Thanks to Fabrice Bellet
	<fabrice@bellet.info> for reporting the bug.

7.	Fixed a bug preventing dump to access a filesystem having 
	a label exactly 16 bytes in length. Thanks to <minduni@ti-edu.ch>
	for reporting the bug.

Changes between versions 0.4b32 and 0.4b33 (released February 10, 2003)
=======================================================================

1.	Added a note in the restore man page clarifying the question
	'set the permissions on the current directory ?' asked by
	restore at the end of treatment in -i and -x modes.

2.	Fixed the endianess issues when reading compressed tapes.
	Thanks to Dark Force <daq4th@users.sourceforge.net> for
	reporting this bug and providing test cases.

3.	Fixed the "ACL won't be dumped" warning message (which showed
	an extra, unrelated error message). Thanks to Dragan Krnic