@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.218 2003/02/25 14:06:47 stelian Exp $
+$Id: CHANGES,v 1.219 2003/03/06 14:35:48 stelian Exp $
 
 Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 =======================================================================
@@ -31,6 +31,11 @@ Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
 7.	Fixed a bug preventing dump to access a filesystem having 
 	a label exactly 16 bytes in length. Thanks to <minduni@ti-edu.ch>
 	for reporting the bug.
+
+8.	Made dump store dump dates using explicit timezones, fixing a
+	problem with incremental dumps if the timezone is modified 
+	between the dumps. Thanks to Philippe Troin <phil@fifi.org> for
+	the bug report and the patch.
 
 Changes between versions 0.4b32 and 0.4b33 (released February 10, 2003)
 =======================================================================
